<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:text="@string/Cancel"
            android:textColor="@color/text_color_444444"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_big_size"
            android:textColor="#333333"
            android:gravity="center"
            android:text="@string/Dialog_XZQY"
            android:visibility="invisible"/>


        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:text="@string/Sure"
            android:textColor="@color/text_color_444444"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
    <View style="@style/app_line" />
</LinearLayout>
