<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/Dialog_Market_SCZP"
            android:textColor="@color/text_main_color" 
            android:textSize="@dimen/text_big_size"/>

        <View style="@style/app_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <LinearLayout
                android:id="@+id/openCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="42dp"
                    android:src="@mipmap/menu_came" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/text_normal_size"
                    android:textColor="#246ce0"
                    android:text="@string/Photo_camera"/>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/app_line" />

            <LinearLayout
                android:id="@+id/choosePhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="42dp"
                    android:src="@mipmap/menu_lib" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/text_normal_size"
                    android:textColor="#246ce0"
                    android:text="@string/Photo_xiangce"/>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/app_line" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textSize="@dimen/text_big_size"
            android:textColor="#246ce0" />
    </LinearLayout>

</LinearLayout>