<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_40">


    <LinearLayout
        android:id="@+id/load_more_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View style="@style/app_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">



            <com.xunda.lib.common.view.ProgressWheel
                android:id="@+id/loading_progress"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="4dp"
                android:clickable="false"
                android:gravity="center"
                wheel:matProg_barColor="@color/text_color_1F8FE5"
                wheel:matProg_progressIndeterminate="true"
                wheel:matProg_barWidth="2dp"/>

            <TextView
                android:id="@+id/loading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_4"
                android:text="@string/brvah_loading"
                android:textColor="@color/text_color_1F8FE5"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/load_more_load_fail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">


        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/brvah_load_failed"
            android:textColor="#0dddb8" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/load_more_load_end_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View style="@style/app_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/brvah_load_end"
                android:textColor="@color/text_other_color" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>